[tool.poetry]
name = "pycm"
version = "0.1.0"
description = ""
authors = ["kk <kanbang@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyqt5 = "^5.15.9"
pyinstaller = "^6.0.0"
debugpy = "^1.8.0"


[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
